--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,33 @@ services:
         environment:
             - CHOKIDAR_USEPOLLING=true
         build:
-            context: .
             dockerfile: Dockerfile.dev
+            context: ./client
         ports:
             - "3000:3000"
         volumes:
             - /app/node_modules
             #don't touch /app/node_modules
-            - .:/app
+            - ./client:/app
             #copy everything in our local files to app
+    api:
+        environment:
+            - CHOKIDAR_USEPOLLING=true
+            - user
+            - database
+            - password
+            - elephantSQLUser
+            - elephantSQLServer
+            - elephantSQLDatabase
+            - elephantSQLPassword
+        #nodemon will not work without chokidar
+        #https://github.com/remy/nodemon/issues/1802
+        build:
+            dockerfile: Dockerfile.dev
+            context: ./server
+        ports:
+            - "5000:5000"
+        volumes:
+            - /app/node_modules
+            - ./server:/app
 #We are usign docker compose here for volumes
