--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
     - docker
 
 before_install:
-    - docker build -t mattfrancis/multi-docker-test -f Dockerfile.dev .
+    - docker build -t mattfrancis/multi-docker-test -f ./client/Dockerfile.dev ./client
 # tag is only used in travis, not related to tags in our local computer
 script:
     - docker run -e CI=true mattfrancis/multi-docker-test npm run test -- --coverage
