Fixed dockerfile for production.

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,15 +1,14 @@
 FROM node:alpine as builder
 WORKDIR /app
-COPY package.json .
+COPY ./package.json ./
 RUN npm install
 COPY . .
-RUN npm run build
 
 #FROM nginx
 EXPOSE 3000
-
 EXPOSE $PORT
-CMD [ "npm", "start"]
+
+CMD ["npm", "start"]
 #COPY --from=builder /app/build /usr/share/nginx/html
 # --from=builder "I want to copy something from the builder phase"
 # /usr/share/nginx/html is where nginx will serve our build; check the docs at dockerhub
