Added nginx so that the client and server can be deployed for production. Configured travis yml to push docker images to dockerhub. Added Dockerrun.aws.jsoon so that AWS knows what images to run.

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -5,13 +5,9 @@ RUN npm install
 COPY . .
 RUN npm run build
 
-#FROM nginx
+FROM nginx
 EXPOSE 3000
-EXPOSE $PORT
-
-CMD [ "npm", "start"]
-#COPY --from=builder /app/build /usr/share/nginx/html
+COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY --from=builder /app/build /usr/share/nginx/html
 # --from=builder "I want to copy something from the builder phase"
 # /usr/share/nginx/html is where nginx will serve our build; check the docs at dockerhub
-
-#https://www.codementor.io/@idreesibraheem/how-to-deploy-a-minimal-docker-app-to-heroku-136rp9223y
