--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ services:
     - docker
 
 before_install:
-    - docker build -t mattfrancis/multi-docker-test -f ./client/Dockerfile.dev ./client
+    - docker build -t mattfrancis888/multi-docker-test -f ./client/Dockerfile.dev ./client
 # tag is only used in travis, not related to tags in our local computer
 script:
-    - docker run -e CI=true mattfrancis/multi-docker-test npm run test -- --coverage
+    - docker run -e CI=true mattfrancis888/multi-docker-test npm run test -- --coverage
 # we run dockerfile.dev because dockerfile.dev allows tests suites to run
 
 deploy:
@@ -15,3 +15,26 @@ deploy:
     api_key: $HEROKU_API_KEY
     app: multi-docker-project
 #https://travis-ci.community/t/failed-to-deploy-heroku-api-request-failed-message-invalid-credentials-provided/9988/4
+
+# deploy:
+#   provider: elasticbeanstalk
+#   region: 'us-east-1'
+#   app: 'multi-docker'
+#   env: 'MultiDocker-env'
+#   bucket_name: 'elasticbeanstalk-us-east-1-923445559289'
+#   bucket_path: 'docker-multi'
+#   on:
+#     branch: master
+#   access_key_id: $AWS_ACCESS_KEY
+#   secret_access_key: $AWS_SECRET_KEY
+
+after_success:
+    - docker build -t mattfrancis888/multi-client ./client
+    - docker build -t mattfrancis888/multi-nginx ./nginx
+    - docker build -t mattfrancis888/multi-server ./server
+    # Log in to the docker CLI
+    - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+    # push images above to dockerhub
+    - docker push mattfrancis888/multi-client
+    - docker push mattfrancis888/multi-nginx
+    - docker push mattfrancis888/multi-server
