--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,20 @@
 version: "3"
 services:
-    web:
+    nginx:
+        restart: always
+        build:
+            dockerfile: Dockerfile.dev
+            context: ./nginx
+        ports:
+            - "3050:80"
+    client:
         environment:
             - CHOKIDAR_USEPOLLING=true
         build:
             dockerfile: Dockerfile.dev
             context: ./client
-        ports:
-            - "3000:3000"
+        # ports:
+        #     - "3000:3000"
         volumes:
             - /app/node_modules
             #don't touch /app/node_modules
@@ -28,8 +35,8 @@ services:
         build:
             dockerfile: Dockerfile.dev
             context: ./server
-        ports:
-            - "5000:5000"
+        # ports:
+        #     - "5000:5000"
         volumes:
             - /app/node_modules
             - ./server:/app
