Created responsive homepage for all screens.

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,10 +7,8 @@ upstream api {
 }
 
 server {
-  #listen 80;
-  #https://dev.to/levelupkoodarit/deploying-containerized-nginx-to-heroku-how-hard-can-it-be-3g14   
-  #README:heroku uses $port variable, so just switch back to 80 for development
-  listen 0.0.0.0:$PORT;
+  listen 80;
+
 
   location / {
    root /usr/share/nginx/html;
