--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,10 @@
         "axios": "^0.21.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "react-router-dom": "^5.2.0",
+        "history": "^4.10.1",
         "react-scripts": "4.0.2",
+        "react-spinners": "^0.10.6",
         "web-vitals": "^1.1.0"
     },
     "scripts": {
