--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,15 @@
         "@testing-library/react": "^11.2.5",
         "@testing-library/user-event": "^12.6.3",
         "axios": "^0.21.1",
+        "history": "^4.10.1",
+        "nock": "^13.0.7",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
-        "history": "^4.10.1",
         "react-scripts": "4.0.2",
         "react-spinners": "^0.10.6",
+        "wait-for-expect": "^3.0.2",
         "web-vitals": "^1.1.0"
     },
     "scripts": {
