Removed heroku deployment in travis.yml.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,10 @@ script:
     - docker run -e CI=true mattfrancis888/multi-docker-test npm run test -- --coverage
 # we run dockerfile.dev because dockerfile.dev allows tests suites to run
 
-deploy:
-    provider: heroku
-    api_key: $HEROKU_API_KEY
-    app: multi-docker-project
+# deploy:
+#     provider: heroku
+#     api_key: $HEROKU_API_KEY
+#     app: multi-docker-project
 #https://travis-ci.community/t/failed-to-deploy-heroku-api-request-failed-message-invalid-credentials-provided/9988/4
 
 # deploy:
